--- a/src/styles/_pokemon-type.scss
+++ b/src/styles/_pokemon-type.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0.5rem 0;
 
     &__type {
         padding: 1rem 2rem;
