--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,8 @@
 $main-font: 'Be Vietnam', sans-serif;
+$text-color: #0d0d0d;
 $shadow-color: rgba(0, 0, 0, 0.2);
 $white-color: #f0f0f0;
 $gray-color: grey;
 $border-color: #222224;
 $pokeball-red-color: #ee1515;
+$font-weight-bold: 700;
