--- a/src/styles/_pokemon-type.scss
+++ b/src/styles/_pokemon-type.scss
@@ -1,14 +1,18 @@
+@import './variables';
+
 .pokemon-types {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0.5rem 0;
+    padding-top: 2rem;
 
     &__type {
         padding: 1rem 2rem;
         border-radius: 1rem;
         text-transform: uppercase;
         letter-spacing: 1px;
+        font-size: 0.85rem;
+        font-weight: $font-weight-bold;
         background-color: $white-color;
         margin: 0 0.5rem;
         box-shadow: 0 0.25rem 0.5rem 0 $shadow-color;
