--- a/src/styles/_pokemon.scss
+++ b/src/styles/_pokemon.scss
@@ -1,42 +1,64 @@
 @import './variables';
+@import './mixins';
+
+$pseudo-element-z-index: 0;
 
 .pokemon-card {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-width: 50rem;
-
-    box-shadow: 0 0.25rem 0.5rem 0 $shadow-color;
     align-items: center;
-    margin: 0 auto;
+    width: 100%;
+    max-width: 40rem;
+
     border-radius: 6rem;
     padding: 0 2rem;
     background: $white-color;
 
+    @include shadow;
+
     &__header {
         position: relative;
-        background: $pokeball-red-color;
-        border-bottom: 0.5rem solid $border-color;
-        border-radius: 6rem 6rem 0 0;
-        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        padding: 3rem 2rem;
+        width: 100%;
+        height: 15rem;
+
         font-size: 1.5rem;
+        background: $pokeball-red-color;
+        border-bottom: 0.5rem solid $border-color;
+        border-radius: 6rem 6rem 0 0;
+        padding: 3rem 2rem;
+
+        &::after,
+        &::before {
+            content: '';
+            box-sizing: border-box;
+            position: absolute;
+            border-radius: 50%;
+        }
 
         &::after {
-            box-sizing: border-box;
-            content: '';
-            position: absolute;
+            bottom: 0 - 2rem;
+            left: calc(50% - 2rem);
+            width: 4rem;
+            height: 4rem;
+
+            border: 0.5rem solid $border-color;
+            background: $white-color;
+            z-index: $pseudo-element-z-index;
+        }
+
+        &::before {
+            bottom: 0 - 1rem;
+            left: calc(50% - 1rem);
             width: 2rem;
             height: 2rem;
-            border-radius: 50%;
-            bottom: 0 - 1.25rem;
-            left: calc(50% - 1rem);
-            background: white;
-            border: 0.5rem solid $border-color;
+
+            border: 0.25rem solid $border-color;
+            z-index: $pseudo-element-z-index + 1;
         }
     }
 
