--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,9 +8,22 @@
 body {
     font-size: 16px;
     font-family: $main-font;
+    padding: 0;
+    margin: 0;
 }
 
 ul {
     list-style: none;
     padding: 0;
+}
+
+a {
+    color: $text-color;
+    text-decoration: none;
+}
+
+.main {
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
 }
